# ChangeLog for media-gfx/mapivi
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Dec 2006; Christian Berendt (lhunephel) <christian@suppentopf.net>
  mapivi-0.9.1.ebuild:
  media-gfx/mapivi: added some quotes and adjusted DESCRIPTION

  04 Dec 2006; Stefan Schweizer <genstef@gentoo.org> mapivi-0.9.1.ebuild,
  -mapivi-8.1.0.ebuild:
  remove version that looks newer but is in fact older, fix wrong  usage

  22 Nov 2006; Christian Berendt (lhunephel) <christian@suppentopf.net>
  mapivi-0.9.1.ebuild:
  removed the ppc keyword.

  22 Nov 2006; Christian Berendt (lhunephel) <christian@suppentopf.net>
  +mapivi-0.9.1.ebuild:
  Rewritten ebuild for bug 133333, thanks to genstef for reviewing

  24 Jun 2006; Samuli Suominen <sasuomin@uusikaupunki.fi> ChangeLog:
  Initial version. See bug #133333.
