@@ -1,4 +1,4 @@
 DIST mapivi091.tgz 359537 RMD160 508172514862496b995080d7e5605c1d8e3f0dab SHA1 53d285cd43fd8418caabc298275a047308a81643 SHA256 5655090fb4acb35031f18806b043232e9e564ff174865dc34f5b9104cb1152ad
-EBUILD mapivi-0.9.1.ebuild 1179 RMD160 01f1bae52d676cd55ffed56506c5d9b6229d74c6 SHA1 70c3f1b22c492b6d34e09ab02066df3944ea1f3c SHA256 99912cd5bfa1ad69d70ccc999456f5604eeab600740ce3e96441c638f80252fa
-MISC ChangeLog 841 RMD160 7490e69b8bbb7deed51fc8c942abf7d2bb4aea92 SHA1 defbc61222423af30b13e815adead909cbbc0c7a SHA256 c61fb81e720cc703a375148650170348336f06e5e7d9e0f9b28a9b257a6edacf
+EBUILD mapivi-0.9.1.ebuild 1222 RMD160 2e7dfe1b2316720d733b6152f012d3c24346339d SHA1 4d07f5ba9dc62380da293f2bbcc316de782048f2 SHA256 6329a943b7e15b9ae2861684902d36415fba8b6a61156b5b4d49a2c0d209a71c
+MISC ChangeLog 988 RMD160 5446a140240044c6a58f4b949b41abefbefbc183 SHA1 321750107e501cfe1966626f79c351f7dc3cc766 SHA256 956a69cba94a97883dfecb832fe599ab1638d57b977887a0ced1f2cf495843dc
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
