@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/mapivi
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  mapivi-0.9.1.ebuild:
+  Add suggested RDEPEND=${DEPEND}, simplify, add die statements
 
   11 Dec 2006; Christian Berendt (lhunephel) <christian@suppentopf.net>
   mapivi-0.9.1.ebuild:
